--- a/awesomedialoglib/src/main/res/layout/dialog_list.xml
+++ b/awesomedialoglib/src/main/res/layout/dialog_list.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="35dp"
             android:text="@string/app_name"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -33,44 +33,49 @@
             android:layout_below="@+id/dialog_title"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginBottom="7dp"
             android:gravity="center"
             android:text="@string/app_name" />
 
-        <Button
-            android:id="@+id/btDialogYes"
-            style="@style/RoundedDialog"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_below="@+id/dialog_message"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
-            android:paddingStart="10dp"
-            android:paddingLeft="10dp"
-            android:paddingEnd="10dp"
-            android:paddingRight="10dp"
-            android:visibility="gone" />
+            android:layout_height="wrap_content"
+            android:layout_below="@id/dialog_message"
+            android:orientation="horizontal"
+            android:weightSum="2">
 
+            <Button
+                android:id="@+id/btDialogNo"
+                style="@style/RoundedDialog"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:visibility="gone" />
 
-        <Button
-            android:id="@+id/btDialogNo"
-            style="@style/RoundedDialog"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_below="@+id/btDialogYes"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
-            android:paddingStart="10dp"
-            android:paddingLeft="10dp"
-            android:paddingEnd="10dp"
-            android:paddingRight="10dp"
-            android:visibility="gone" />
+            <Button
+                android:id="@+id/btDialogYes"
+                style="@style/RoundedDialog"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:visibility="gone" />
+
+        </LinearLayout>
 
     </RelativeLayout>
 
