--- a/awesomedialoglib/src/main/res/values/colors.xml
+++ b/awesomedialoglib/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="dialogInfoBackgroundColor">#2866BF</color>
+    <color name="dialogListBackgroundColor">#029bc9</color>
     <color name="dialogSuccessBackgroundColor">#00b576</color>
     <color name="dialogProgressBackgroundColor">#2866BF</color>
     <color name="dialogErrorBackgroundColor">#C1272D</color>
