adding recycler to dialog

--- a/awesomedialoglib/src/main/res/layout/dialog_list.xml
+++ b/awesomedialoglib/src/main/res/layout/dialog_list.xml
@@ -26,9 +26,9 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <ListView
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/dialog_message"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/dialog_title"
             android:layout_centerHorizontal="true"
