--- a/awesomedialoglib/src/main/res/layout/dialog_list.xml
+++ b/awesomedialoglib/src/main/res/layout/dialog_list.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"
+    android:layout_gravity="top"
     android:orientation="vertical">
 
     <RelativeLayout
