--- a/awesomedialoglib/src/main/res/layout/dialog_list.xml
+++ b/awesomedialoglib/src/main/res/layout/dialog_list.xml
@@ -2,9 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp"
-    android:layout_gravity="top"
+    android:layout_gravity="center_horizontal|top"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -13,7 +11,6 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_marginTop="150dp"
         android:background="@drawable/dialog_round">
 
         <TextView
@@ -22,9 +19,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="5dp"
             android:text="@string/app_name"
-            android:textSize="20sp"
+            android:textSize="23sp"
             android:textStyle="bold" />
 
         <android.support.v7.widget.RecyclerView
@@ -77,33 +74,6 @@
                 android:visibility="gone" />
 
         </LinearLayout>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="35dp"
-        android:background="@drawable/circle_background">
-
-        <RelativeLayout
-            android:id="@+id/colored_circle"
-            style="@style/AlertDialog.AppCompat.CircleBackground"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true">
-
-            <ImageView
-                android:id="@+id/dialog_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true" />
-
-        </RelativeLayout>
 
     </RelativeLayout>
 
