--- a/awesomedialoglib/src/main/res/layout/dialog_password.xml
+++ b/awesomedialoglib/src/main/res/layout/dialog_password.xml
@@ -26,9 +26,9 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/dialog_message"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/dialog_Pin"
+            android:layout_width="283dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/dialog_title"
             android:layout_centerHorizontal="true"
@@ -37,15 +37,18 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
+            android:focusable="false"
             android:gravity="center"
-            android:text="@string/app_name" />
+            android:inputType="numberPassword"
+            android:letterSpacing="0.5"
+            android:textSize="25sp" />
 
         <Button
             android:id="@+id/btDialogYes"
             style="@style/RoundedDialog"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_below="@+id/dialog_message"
+            android:layout_below="@+id/dialog_Pin"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
@@ -56,27 +59,13 @@
             android:paddingRight="10dp"
             android:visibility="gone" />
 
-        <Button
-            android:id="@+id/btDialogNeutral"
-            style="@style/RoundedDialog"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_below="@+id/btDialogYes"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
-            android:paddingStart="10dp"
-            android:paddingLeft="10dp"
-            android:paddingEnd="10dp"
-            android:paddingRight="10dp"
-            android:visibility="gone" />
 
         <Button
             android:id="@+id/btDialogNo"
             style="@style/RoundedDialog"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_below="@+id/btDialogNeutral"
+            android:layout_below="@+id/btDialogYes"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
