--- a/awesomedialoglib/src/main/res/layout/dialog_notice.xml
+++ b/awesomedialoglib/src/main/res/layout/dialog_notice.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="10dp"
     android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -32,10 +32,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/dialog_title"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:gravity="center"
             android:text="@string/app_name" />
 
@@ -45,15 +45,15 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_below="@+id/dialog_message"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            android:visibility="gone"
-            android:paddingEnd="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:paddingStart="10dp"
             android:paddingLeft="10dp"
+            android:paddingEnd="10dp"
             android:paddingRight="10dp"
-            android:paddingStart="10dp" />
+            android:visibility="gone" />
 
     </RelativeLayout>
 
